recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:28: error: not found: value ssquareSide
    ssquareSide(levels-1,length/3)
    ^